--- a/my-vue-wechat/package.json
+++ b/my-vue-wechat/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "marked": "^0.3.6",
     "vue": "^2.1.0"
   },
   "devDependencies": {
